--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>RockPaperScissors</title>
 </head>
 <body>
-    <div class="score"></div>
+    <div class="score">Player Score: 0 | Computer Score: 0</div>
     <div class="btn-container">
         <button class="btn" id="rock">Rock</button>
         <button class="btn" id="paper">Paper</button>
         <button class="btn" id="scissors">Scissors</button>
     </div>
-    <div class="result"></div>
+    <div class="result">This is result</div>
 </body>
 </html>
